--- a/tela_acompanharplano.html
+++ b/tela_acompanharplano.html
@@ -1,8 +1,13 @@
-<!DOCTYPE html>
+
+    <!DOCTYPE html>
     <html lang="pt-BR">
         <head>
             <title>App</title>
             <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+            <link rel="stylesheet" href="css/reset.css">
+            <link rel="stylesheet" href="css/style.css">
         </head>
         <body>
             <header>
