--- a/fluxos de tela.html
+++ b/fluxos de tela.html
@@ -10,23 +10,23 @@
             <link rel="stylesheet" href="css/style.css">
         </head>
         <body>
-            <header>
+            <header class="titulo bordatitulo">
                 <h1>
                     App
                 </h1>
             </header>
             <main>
-                <ol>
-                    <li><a href="tela_agenda.html"></li>
-                        Agenda
-                    </a>
-                    <li><a href="tela_relações.html"></li>
-                        Relações
-                    </a>
-                    <li><a href="tela_planodefidelidade.html"></li>
-                        Plano de Fidelidade
-                    </a>
-                </ol>
+                <ul class="coluna_elementos">
+                    <li>
+                        <a href="tela_agenda.html">Agenda</a>
+                    </li>
+                    <li>
+                        <a href="tela_relações.html">Relações</a>
+                    </li>
+                    <li>
+                        <a href="tela_planodefidelidade.html">Plano de Fidelidade</a>
+                    </li>
+                </ul>
             </main>
         </body>
     </html>
