--- a/fluxos de tela.html
+++ b/fluxos de tela.html
@@ -15,18 +15,24 @@
                     App
                 </h1>
             </header>
-            <main>
+            <nav>
                 <ul class="coluna_elementos">
-                    <li>
-                        <a href="tela_agenda.html">Agenda</a>
-                    </li>
-                    <li>
-                        <a href="tela_relações.html">Relações</a>
-                    </li>
-                    <li>
-                        <a href="tela_planodefidelidade.html">Plano de Fidelidade</a>
-                    </li>
+                    <ul class="cadaescolha">
+                        <li>
+                            <a href="tela_agenda.html">Agenda</a>
+                        </li>
+                    </ul>
+                    <ul class="cadaescolha">
+                        <li>
+                            <a href="tela_relações.html">Relações</a>
+                        </li>
+                    </ul>
+                    <ul class="cadaescolha">
+                        <li>
+                            <a href="tela_planodefidelidade.html">Plano de Fidelidade</a>
+                        </li>
+                    </ul>
                 </ul>
-            </main>
+            </nav>
         </body>
     </html>
