--- a/fluxos de tela.html
+++ b/fluxos de tela.html
@@ -17,17 +17,17 @@
             </header>
             <nav>
                 <ul class="coluna_elementos">
-                    <ul class="cadaescolha">
+                    <ul class="cadaescolha borda">
                         <li>
                             <a href="tela_agenda.html">Agenda</a>
                         </li>
                     </ul>
-                    <ul class="cadaescolha">
+                    <ul class="cadaescolha borda">
                         <li>
                             <a href="tela_relações.html">Relações</a>
                         </li>
                     </ul>
-                    <ul class="cadaescolha">
+                    <ul class="cadaescolha borda">
                         <li>
                             <a href="tela_planodefidelidade.html">Plano de Fidelidade</a>
                         </li>
