deixando os códigos htmls arrumados

--- a/tela_agenda.html
+++ b/tela_agenda.html
@@ -18,17 +18,17 @@
                 </a>
             </header>
             <main>
-                <ol>
-                    <li><a href="tela_hoje.html"></li>
-                        Hoje
-                    </a>
-                    <li><a href="tela_semana.html"></li>
-                        Semana
-                    </a>
-                    <li><a href="tela_mes.html"></li>
-                        Mês
-                    </a>
-                </ol>
+                <ul>
+                    <li>
+                        <a href="tela_hoje.html">Hoje</a>
+                    </li>
+                    <li>
+                        <a href="tela_semana.html">Semana</a>
+                    </li>
+                    <li>
+                        <a href="tela_mes.html">Mês</a>
+                    </li>
+                </ul>
             </main>
         </body>
     </html>
