--- a/tela_darfeedback.html
+++ b/tela_darfeedback.html
@@ -18,21 +18,21 @@
                 </a>
             </header>
             <main>
-                <ol>
-                    <li><a href="tela_alice.html"></li>
-                        Alice(Feedback Pendente)
-                    </a>
-                    <li><a href="tela_claudia.html"></li>
-                        Claudia(Feedback Pendente)
-                    </a>
-                    <li><a href="tela_joana.html"></li>
-                        Joana(Feedback Pendente)
-                    </a>
-                </ol>
-                <ol>
+                <ul>
+                    <li>
+                        <a href="tela_alice.html">Alice(Feedback Pendente)</a>
+                    </li>
+                    <li>
+                        <a href="tela_claudia.html">Claudia(Feedback Pendente)</a>
+                    </li>
+                    <li>
+                        <a href="tela_joana.html">Joana(Feedback Pendente)</a>
+                    </li>
+                </ul>
+                <ul>
                     <li>Márcio(Feedback Concluído)</li>
                     <li>Joaquim(Feedback Concluído)</li>
-                </ol>
+                </ul>
             </main>
         </body>
     </html>
