--- a/tela_hoje.html
+++ b/tela_hoje.html
@@ -18,14 +18,14 @@
                 </a>
             </header>
             <main>
-                <ol>
-                    <li><a href="tela_Jose.html"></li>
-                        12:00 - Corte José
-                    </a>
-                    <li><a href="tela_Luciana.html"></li>
-                        14:00 - Manicure Luciana
-                    </a>
-                </ol>
+                <ul>
+                    <li>
+                        <a href="tela_Jose.html"> 12:00 - Corte José</a>
+                    </li>
+                    <li>
+                        <a href="tela_Luciana.html">14:00 - Manicure Luciana</a>
+                    </li>
+                </ul>
             </main>
         </body>
     </html>
