--- a/tela_planodecortes.html
+++ b/tela_planodecortes.html
@@ -18,14 +18,14 @@
                 </a>
             </header>
             <main>
-                <ol>
-                    <li><a href="tela_vizualizarplano.html"></li>
-                        Vizualizar Plano
-                    </a>
-                    <li><a href="tela_acompanharplano.html"></li>
-                        Acompanhar o andamento dos meus clientes
-                    </a>
-                </ol>
+                <ul>
+                    <li>
+                        <a href="tela_vizualizarplano.html">Vizualizar Plano</a>
+                    </li>
+                    <li>
+                        <a href="tela_acompanharplano.html">Acompanhar o andamento dos meus clientes</a>
+                    </li>
+                </ul>
             </main>
         </body>
     </html>
