--- a/tela_planodefidelidade.html
+++ b/tela_planodefidelidade.html
@@ -18,14 +18,14 @@
                 </a>
             </header>
             <main>
-                <ol>
-                    <li><a href="tela_meusplanos.html"></li>
-                        Meus Planos
-                    </a>
-                    <li><a href="tela_criarnovoplano.html"></li>
-                        Criar um novo Plano
-                    </a>
-                </ol>
+                <ul>
+                    <li>
+                        <a href="tela_meusplanos.html">Meus Planos</a>
+                    </li>
+                    <li>
+                        <a href="tela_criarnovoplano.html">Criar um novo Plano</a>
+                    </li>
+                </ul>
             </main>
         </body>
     </html>
