--- a/tela_relações.html
+++ b/tela_relações.html
@@ -18,14 +18,14 @@
                 </a>
             </header>
             <main>
-                <ol>
-                    <li><a href="tela_darfeedback.html"></li>
-                        Dar Feedback
-                    </a>
-                    <li><a href="tela_meusfeedbacks.html"></li>
-                        Meus Feedbacks
-                    </a>
-                </ol>
+                <ul>
+                    <li>
+                        <a href="tela_darfeedback.html">Dar Feedback</a>
+                    </li>
+                    <li>
+                        <a href="tela_meusfeedbacks.html">Meus Feedbacks</a>
+                    </li>
+                </ul>
             </main>
         </body>
     </html>
