modificações no css

--- a/fluxos de tela.html
+++ b/fluxos de tela.html
@@ -10,28 +10,32 @@
             <link rel="stylesheet" href="css/style.css">
         </head>
         <body>
-            <header class="titulo bordatitulo">
+            <header>
                 <h1>
-                    App
+                    APP
                 </h1>
             </header>
             <nav>
-                <ul class="coluna_elementos">
-                    <ul class="cadaescolha borda">
-                        <li>
-                            <a href="tela_agenda.html">Agenda</a>
-                        </li>
-                    </ul>
-                    <ul class="cadaescolha borda">
-                        <li>
-                            <a href="tela_relações.html">Relações</a>
-                        </li>
-                    </ul>
-                    <ul class="cadaescolha borda">
-                        <li>
-                            <a href="tela_planodefidelidade.html">Plano de Fidelidade</a>
-                        </li>
-                    </ul>
+                <ul class="block">
+                    <li class="border">
+                        <ul class="linha">
+                            <li class="agenda"><img src="icones/icone agenda 1.png"></li>
+                            <li><a href="tela_agenda.html">Agenda</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="border">
+                        <ul class="linha">
+                            <li class="agenda"><img src="icones/icone relacoes 1.png"></li>
+                            <li><a href="tela_relações.html">Agenda</a></li>
+                        </ul>
+                    </li>
+                    <li class="border">
+                         <ul class="linha">
+                            <li class="agenda"><img src="icones/icone fidelidade 1.png"></li>
+                            <li><a href="tela_planodefidelidade.html">Agenda</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </body>
