--- a/tela_Jose.html
+++ b/tela_Jose.html
@@ -13,13 +13,13 @@
                 <h1>
                     Corte José
                 </h1>
-                <a href="tela_hoje.html">
-                    Voltar
+                <a class="voltar" href="tela_hoje.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                Materiais necssários para o serviço:
-                <ul>
+                <ul class="text-block">
+                    <li>Materiais necssários para o serviço:</li>
                     <li>Kit básico de cortes de cabelo</li>
                 </ul>
             </main>
