--- a/tela_Luciana.html
+++ b/tela_Luciana.html
@@ -13,15 +13,22 @@
                 <h1>
                     Manicure Luciana
                 </h1>
-                <a href="tela_hoje.html">
-                    Voltar
+                <a class="voltar" href="tela_hoje.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                Materiais necssários para o serviço:
-                <ul>
-                    <li>Kit básico de manicure</li>
-                    <li>Tinta Rosa</li>
+                    <ul class="text-block">
+                    <li>Materiais necssários para o serviço:
+                        <input type="text" placeholder="texto">
+                    </li>
+
+                    <li>Kit básico de manicure
+                        <input type="text" placeholder="texto">
+                    </li>
+                    <li>Tinta Rosa
+                        <input type="text" placeholder="texto">
+                    </li>
                 </ul>
             </main>
         </body>
