--- a/tela_hoje.html
+++ b/tela_hoje.html
@@ -13,16 +13,16 @@
                 <h1>
                     Hoje
                 </h1>
-                <a href="tela_agenda.html">
-                    Voltar
+                <a class="voltar" href="tela_agenda.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                <ul>
-                    <li>
+                <ul class="block">
+                    <li class="border">
                         <a href="tela_Jose.html"> 12:00 - Corte José</a>
                     </li>
-                    <li>
+                    <li class="border">
                         <a href="tela_Luciana.html">14:00 - Manicure Luciana</a>
                     </li>
                 </ul>
