--- a/tela_joana.html
+++ b/tela_joana.html
@@ -13,8 +13,8 @@
                 <h1>
                     Feedback para a Joana
                 </h1>
-                <a href="tela_darfeedback.html">
-                    Voltar
+                <a class="voltar" href="tela_hoje.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
