--- a/tela_meusplanos.html
+++ b/tela_meusplanos.html
@@ -13,15 +13,22 @@
                 <h1>
                     Meus Planos
                 </h1>
-                <a href="tela_planodefidelidade.html">
-                    Voltar
+                <a class="voltar" href="tela_planodefidelidade.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                <ul>
-                    <li><a href="tela_planodecortes.html"></li>
-                        Plano de Cortes
-                    </a>
+                <ul class="block">
+                    <li class="border">
+                        <a href="tela_planodecortes.html">
+                        Visualizar Plano Atual
+                        </a>
+                    </li>
+                    <li class="border">
+                        <a href="tela_planodecortes.html">
+                        Acompanhar Clientes
+                        </a>
+                    </li>
                 </ul>
             </main>
         </body>
