--- a/tela_planodefidelidade.html
+++ b/tela_planodefidelidade.html
@@ -13,16 +13,16 @@
                 <h1>
                     Plano de Fidelidade
                 </h1>
-                <a href="fluxos de tela.html">
-                    Voltar
+                <a class="voltar" href="fluxos de tela.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                <ul>
-                    <li>
+                <ul class="block">
+                    <li class="border">
                         <a href="tela_meusplanos.html">Meus Planos</a>
                     </li>
-                    <li>
+                    <li class="border">
                         <a href="tela_criarnovoplano.html">Criar um novo Plano</a>
                     </li>
                 </ul>
