--- a/tela_relações.html
+++ b/tela_relações.html
@@ -13,16 +13,16 @@
                 <h1>
                     Relações
                 </h1>
-                <a href="fluxos de tela.html">
-                    Voltar
+                <a class="voltar" href="tela_agenda.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                <ul>
-                    <li>
+                <ul class = "block">
+                    <li class="border">
                         <a href="tela_darfeedback.html">Dar Feedback</a>
                     </li>
-                    <li>
+                    <li class="border">
                         <a href="tela_meusfeedbacks.html">Meus Feedbacks</a>
                     </li>
                 </ul>
