--- a/tela_vizualizarplano.html
+++ b/tela_vizualizarplano.html
@@ -13,14 +13,14 @@
         <body>
             <header>
                 <h1>
-                    Vizualizar meu plano
+                    Plano Atual
                 </h1>
-                <a href="tela_planodecortes.html">
-                    Voltar
+                <a class="voltar" href="tela_meusplanos.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                <ul>
+                <ul class="text-block">
                     <li>Nome do Plano: Plano de Cortes</li>
                     <li>Data de Vencimento: 07/03/2023</li>
                     <li>Métrica utilizada: Número de cortes</li>
