--- a/tela_agenda.html
+++ b/tela_agenda.html
@@ -13,19 +13,19 @@
                 <h1>
                     Agenda
                 </h1>
-                <a href="fluxos de tela.html">
-                    Voltar
+                <a class="voltar" href="fluxos de tela.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                <ul>
-                    <li>
+                <ul class = "block">
+                    <li class = "border">
                         <a href="tela_hoje.html">Hoje</a>
                     </li>
-                    <li>
+                    <li class = "border">
                         <a href="tela_semana.html">Semana</a>
                     </li>
-                    <li>
+                    <li class = "border">
                         <a href="tela_mes.html">Mês</a>
                     </li>
                 </ul>
