--- a/fluxos de tela.html
+++ b/fluxos de tela.html
@@ -27,13 +27,13 @@
                     <li class="border">
                         <ul class="linha">
                             <li class="agenda"><img src="icones/icone relacoes 1.png"></li>
-                            <li><a href="tela_relações.html">Agenda</a></li>
+                            <li><a href="tela_relações.html">Relações</a></li>
                         </ul>
                     </li>
                     <li class="border">
                          <ul class="linha">
                             <li class="agenda"><img src="icones/icone fidelidade 1.png"></li>
-                            <li><a href="tela_planodefidelidade.html">Agenda</a></li>
+                            <li><a href="tela_planodefidelidade.html">Plano de Fidelidade</a></li>
                         </ul>
                     </li>
                 </ul>
