--- a/tela_Jose.html
+++ b/tela_Jose.html
@@ -18,9 +18,11 @@
                 </a>
             </header>
             <main>
-                <ul class="text-block">
-                    <li>Materiais necssários para o serviço:</li>
-                    <li>Kit básico de cortes de cabelo</li>
+                <ul class="coluna_meio">
+                    <ul class="text-block">
+                        <li>Materiais necssários para o serviço:</li>
+                        <li>Kit básico de cortes de cabelo</li>
+                    </ul>
                 </ul>
             </main>
         </body>
