--- a/tela_Luciana.html
+++ b/tela_Luciana.html
@@ -18,17 +18,12 @@
                 </a>
             </header>
             <main>
+                <ul class="coluna_meio">
                     <ul class="text-block">
-                    <li>Materiais necssários para o serviço:
-                        <input type="text" placeholder="texto">
-                    </li>
-
-                    <li>Kit básico de manicure
-                        <input type="text" placeholder="texto">
-                    </li>
-                    <li>Tinta Rosa
-                        <input type="text" placeholder="texto">
-                    </li>
+                        <li>Materiais necssários para o serviço:</li>
+                        <li>Kit básico de manicure</li>
+                        <li>Tinta Rosa</li>
+                    </ul>
                 </ul>
             </main>
         </body>
