--- a/tela_acompanharplano.html
+++ b/tela_acompanharplano.html
@@ -14,15 +14,17 @@
                 <h1>
                     Acompanhar o andamento dos meus clientes
                 </h1>
-                <a href="tela_planodecortes.html">
-                    Voltar
+                <a class="voltar" href="tela_planodecortes.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                <ul>
-                    <li>Maria 1/5</li>
-                    <li>João 4/5</li>
-                    <li>Lucas 2/5</li>
+                <ul class="coluna_meio">
+                    <ul class="text-block">
+                        <li>Maria 1/5</li>
+                        <li>João 4/5</li>
+                        <li>Lucas 2/5</li>
+                    </ul>
                 </ul>
             </main>
         </body>
