--- a/tela_claudia.html
+++ b/tela_claudia.html
@@ -13,22 +13,18 @@
                 <h1>
                     Feedback para a Claudia
                 </h1>
-                <a href="tela_darfeedback.html">
-                    Voltar
+                <a class="voltar" href="tela_darfeedback.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                Atribua com uma nota de 0 a 10 de acordo com a intensidade da sua resposta as seguintes perguntas. 
-                <ul>
-                    <li>
-                        Você possui uma boa relação profissional com ele/ela? <input type="text" value="Digite um número de 0 a 10"/>
-                    </li>
-                    <li>
-                        O indivíduo em questão atrapalha sua dinâmica no salão? <input type="text" value="Digite um número de 0 a 10"/>
-                    </li>
-                    <li>
-                        Deixe um comentário pertinente sobre o indivíduo em questão. <input type="text" value="Digite aqui"/>
-                    </li>
+                <ul class="coluna_meio">
+                    <ul class="text-block">
+                        <li>Atribua com uma nota de 0 a 10 de acordo com a intensidade da sua resposta as seguintes perguntas.</li>
+                        <li>Você possui uma boa relação profissional com ele/ela? <input type="text" value="Digite um número de 0 a 10"/></li>
+                        <li>O indivíduo em questão atrapalha sua dinâmica no salão? <input type="text" value="Digite um número de 0 a 10"/></li>
+                        <li>Deixe um comentário pertinente sobre o indivíduo em questão. <input type="text" value="Digite aqui"/></li>
+                    </ul>
                 </ul>
             </main>
         </body>
