--- a/tela_criarnovoplano.html
+++ b/tela_criarnovoplano.html
@@ -13,17 +13,19 @@
                 <h1>
                     Criar um novo Plano
                 </h1>
-                <a href="tela_planodefidelidade.html">
-                    Voltar
+                <a class="voltar" href="tela_planodefidelidade.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                <ul>
-                    <li>Nome do Plano: <input type="text" value="Digite aqui"/></li>
-                    <li>Data de Vencimento: <input type="text" value="xx/xx/xxxx"/><input type="checkbox">Ilimitado</li>
-                    <li>Métrica utilizada: <input type="text" value="Digite aqui"/></li>
-                    <li>Meta, (quantidade desejada até chegar na recompensa): <input type="text" value="Digite aqui"/></li>
-                    <li>Benefício: <input type="text" value="Digite aqui"/></li>
+                <ul class="coluna_meio">
+                    <ul class="text-block">
+                        <li>Nome do Plano: <input type="text" value="Digite aqui"/></li>
+                        <li>Data de Vencimento: <input type="text" value="xx/xx/xxxx"/><input type="checkbox">Ilimitado</li>
+                        <li>Métrica utilizada: <input type="text" value="Digite aqui"/></li>
+                        <li>Meta, (quantidade desejada até chegar na recompensa): <input type="text" value="Digite aqui"/></li>
+                        <li>Benefício: <input type="text" value="Digite aqui"/></li>
+                    </ul>
                 </ul>
             </main>
         </body>
