--- a/tela_darfeedback.html
+++ b/tela_darfeedback.html
@@ -13,25 +13,25 @@
                 <h1>
                     Dar Feedback
                 </h1>
-                <a href="tela_relações.html">
-                    Voltar
+                <a class="voltar" href="tela_relações.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                <ul>
-                    <li>
-                        <a href="tela_alice.html">Alice(Feedback Pendente)</a>
-                    </li>
-                    <li>
-                        <a href="tela_claudia.html">Claudia(Feedback Pendente)</a>
-                    </li>
-                    <li>
-                        <a href="tela_joana.html">Joana(Feedback Pendente)</a>
-                    </li>
-                </ul>
-                <ul>
-                    <li>Márcio(Feedback Concluído)</li>
-                    <li>Joaquim(Feedback Concluído)</li>
+                <ul class="coluna_meio">
+                    <ul class="text-block">
+                        <li>
+                            <a href="tela_alice.html">Alice(Feedback Pendente)</a>
+                        </li>
+                        <li>
+                            <a href="tela_claudia.html">Claudia(Feedback Pendente)</a>
+                        </li>
+                        <li>
+                            <a href="tela_joana.html">Joana(Feedback Pendente)</a>
+                        </li>
+                        <li>Márcio(Feedback Concluído)</li>
+                        <li>Joaquim(Feedback Concluído)</li>
+                    </ul>
                 </ul>
             </main>
         </body>
