--- a/tela_meusfeedbacks.html
+++ b/tela_meusfeedbacks.html
@@ -13,19 +13,21 @@
                 <h1>
                     Meus Feedbacks
                 </h1>
-                <a href="tela_relações.html">
-                    Voltar
+                <a class="voltar" href="tela_relações.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                <ul>
-                    <li>Sua média de respota em relação se você possui uma boa relação com os outros profissionais é de: 8,7/10</li>
-                    <li>Sua média de resposta em relação se você atrapalha a dinâmica dos outros profissionais do salão é de: 1,3/10</li>
-                    <li>Comentários sobre você que os outros profissionais te deram: 
-                        ----------------------------------,
-                        ----------------------------------,
-                        ----------------------------------, ...
-                    </li>
+                <ul class="coluna_meio">
+                    <ul class="text-block">
+                        <li>Sua média de respota em relação se você possui uma boa relação com os outros profissionais é de: 8,7/10</li>
+                        <li>Sua média de resposta em relação se você atrapalha a dinâmica dos outros profissionais do salão é de: 1,3/10</li>
+                        <li>Comentários sobre você que os outros profissionais te deram: 
+                            ----------------------------------,
+                            ----------------------------------,
+                            ----------------------------------, ...
+                        </li>
+                    </ul>
                 </ul>
             </main>
         </body>
