--- a/tela_meusplanos.html
+++ b/tela_meusplanos.html
@@ -21,12 +21,7 @@
                 <ul class="block">
                     <li class="border">
                         <a href="tela_planodecortes.html">
-                        Visualizar Plano Atual
-                        </a>
-                    </li>
-                    <li class="border">
-                        <a href="tela_planodecortes.html">
-                        Acompanhar Clientes
+                        Plano de Cortes
                         </a>
                     </li>
                 </ul>
