--- a/tela_planodecortes.html
+++ b/tela_planodecortes.html
@@ -13,16 +13,16 @@
                 <h1>
                     Plano de Cortes
                 </h1>
-                <a href="tela_meusplanos.html">
-                    Voltar
+                <a class="voltar" href="tela_meusplanos.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                <ul>
-                    <li>
+                <ul class="block">
+                    <li class="border">
                         <a href="tela_vizualizarplano.html">Vizualizar Plano</a>
                     </li>
-                    <li>
+                    <li class="border">
                         <a href="tela_acompanharplano.html">Acompanhar o andamento dos meus clientes</a>
                     </li>
                 </ul>
