--- a/tela_vizualizarplano.html
+++ b/tela_vizualizarplano.html
@@ -15,17 +15,19 @@
                 <h1>
                     Plano Atual
                 </h1>
-                <a class="voltar" href="tela_meusplanos.html" target="_blank">
+                <a class="voltar" href="tela_planodecortes.html" target="_blank">
                     <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                <ul class="text-block">
-                    <li>Nome do Plano: Plano de Cortes</li>
-                    <li>Data de Vencimento: 07/03/2023</li>
-                    <li>Métrica utilizada: Número de cortes</li>
-                    <li>Meta: 5 cortes de cabelo</li>
-                    <li>Benefício: 1 corte grátis</li>
+                <ul class="coluna_meio">
+                    <ul class="text-block">
+                        <li>Nome do Plano: Plano de Cortes</li>
+                        <li>Data de Vencimento: 07/03/2023</li>
+                        <li>Métrica utilizada: Número de cortes</li>
+                        <li>Meta: 5 cortes de cabelo</li>
+                        <li>Benefício: 1 corte grátis</li>
+                    </ul>
                 </ul>
             </main>
         </body>
