--- a/tela_mes.html
+++ b/tela_mes.html
@@ -13,14 +13,16 @@
                 <h1>
                     Mês
                 </h1>
-                <a href="tela_agenda.html">
-                    Voltar
+                <a class="voltar" href="tela_agenda.html" target="_blank">
+                    <img src="icones/icone voltar 7.png">
                 </a>
             </header>
             <main>
-                <figure>
-                    <img src="calendario.png" alt="figmes" height="400" width="800">
-                </figure>
+                <ul class="coluna_meio">
+                    <li>
+                        <figure><img src="calendario.png" alt="figmes" height="400" width="800"></figure>
+                    </li>
+                </ul>
             </main>
         </body>
     </html>
