--- a/tela_relações.html
+++ b/tela_relações.html
@@ -13,7 +13,7 @@
                 <h1>
                     Relações
                 </h1>
-                <a class="voltar" href="tela_agenda.html" target="_blank">
+                <a class="voltar" href="fluxos de tela.html" target="_blank">
                     <img src="icones/icone voltar 7.png">
                 </a>
             </header>
