problema de abertura extra de páginas após apertar o botão de voltar consertado

--- a/tela_Jose.html
+++ b/tela_Jose.html
@@ -13,7 +13,7 @@
                 <h1>
                     Corte José
                 </h1>
-                <a class="voltar" href="tela_hoje.html" target="_blank">
+                <a class="voltar" href="tela_hoje.html">
                     <img src="icones/icone voltar 7.png">
                 </a>
             </header>
