--- a/tela_acompanharplano.html
+++ b/tela_acompanharplano.html
@@ -14,7 +14,7 @@
                 <h1>
                     Acompanhar o andamento dos meus clientes
                 </h1>
-                <a class="voltar" href="tela_planodecortes.html" target="_blank">
+                <a class="voltar" href="tela_planodecortes.html">
                     <img src="icones/icone voltar 7.png">
                 </a>
             </header>
