--- a/tela_claudia.html
+++ b/tela_claudia.html
@@ -13,7 +13,7 @@
                 <h1>
                     Feedback para a Claudia
                 </h1>
-                <a class="voltar" href="tela_darfeedback.html" target="_blank">
+                <a class="voltar" href="tela_darfeedback.html">
                     <img src="icones/icone voltar 7.png">
                 </a>
             </header>
