--- a/tela_planodecortes.html
+++ b/tela_planodecortes.html
@@ -13,7 +13,7 @@
                 <h1>
                     Plano de Cortes
                 </h1>
-                <a class="voltar" href="tela_meusplanos.html" target="_blank">
+                <a class="voltar" href="tela_meusplanos.html">
                     <img src="icones/icone voltar 7.png">
                 </a>
             </header>
