--- a/tela_agenda.html
+++ b/tela_agenda.html
@@ -13,7 +13,7 @@
                 <h1>
                     Agenda
                 </h1>
-                <a class="voltar" href="fluxos de tela.html" target="_blank">
+                <a class="voltar" href="fluxos de tela.html">
                     <img src="icones/icone voltar 7.png">
                 </a>
             </header>
