--- a/tela_darfeedback.html
+++ b/tela_darfeedback.html
@@ -13,7 +13,7 @@
                 <h1>
                     Dar Feedback
                 </h1>
-                <a class="voltar" href="tela_relações.html" target="_blank">
+                <a class="voltar" href="tela_relações.html">
                     <img src="icones/icone voltar 7.png">
                 </a>
             </header>
