--- a/tela_mes.html
+++ b/tela_mes.html
@@ -13,7 +13,7 @@
                 <h1>
                     Mês
                 </h1>
-                <a class="voltar" href="tela_agenda.html" target="_blank">
+                <a class="voltar" href="tela_agenda.html">
                     <img src="icones/icone voltar 7.png">
                 </a>
             </header>
