--- a/tela_meusplanos.html
+++ b/tela_meusplanos.html
@@ -13,7 +13,7 @@
                 <h1>
                     Meus Planos
                 </h1>
-                <a class="voltar" href="tela_planodefidelidade.html" target="_blank">
+                <a class="voltar" href="tela_planodefidelidade.html">
                     <img src="icones/icone voltar 7.png">
                 </a>
             </header>
