--- a/tela_vizualizarplano.html
+++ b/tela_vizualizarplano.html
@@ -15,7 +15,7 @@
                 <h1>
                     Plano Atual
                 </h1>
-                <a class="voltar" href="tela_planodecortes.html" target="_blank">
+                <a class="voltar" href="tela_planodecortes.html">
                     <img src="icones/icone voltar 7.png">
                 </a>
             </header>
