--- a/fluxos de tela.html
+++ b/fluxos de tela.html
@@ -8,33 +8,42 @@
 
             <link rel="stylesheet" href="css/reset.css">
             <link rel="stylesheet" href="css/style.css">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@500&display=swap" rel="stylesheet">
         </head>
         <body>
             <header>
                 <h1>
-                    APP
+                    Nome do APP
                 </h1>
             </header>
             <nav>
                 <ul class="block">
                     <li class="border">
-                        <ul class="linha">
-                            <li class="agenda"><img src="icones/icone agenda 1.png"></li>
-                            <li><a href="tela_agenda.html">Agenda</a></li>
-                        </ul>
+                        <a href="tela_agenda.html">
+                            <ul class="linha">
+                                <li class="agenda"><img src="icones/icone agenda 1.png"></li>
+                                <li>Agenda</li>
+                            </ul>
+                        </a>
                     </li>
 
                     <li class="border">
-                        <ul class="linha">
-                            <li class="agenda"><img src="icones/icone relacoes 1.png"></li>
-                            <li><a href="tela_relações.html">Relações</a></li>
-                        </ul>
+                        <a href="tela_relações.html">
+                            <ul class="linha">
+                                <li class="agenda"><img src="icones/icone relacoes 1.png"></li>
+                                <li>Relações</li>
+                            </ul>
+                        </a>
                     </li>
                     <li class="border">
-                         <ul class="linha">
-                            <li class="agenda"><img src="icones/icone fidelidade 1.png"></li>
-                            <li><a href="tela_planodefidelidade.html">Plano de Fidelidade</a></li>
-                        </ul>
+                        <a href="tela_planodefidelidade.html">
+                            <ul class="linha">
+                                <li class="agenda"><img src="icones/icone fidelidade 1.png"></li>
+                                <li>Plano de Fidelidade</li>
+                            </ul>
+                        </a>
                     </li>
                 </ul>
             </nav>
