--- a/fluxos de tela.html
+++ b/fluxos de tela.html
@@ -17,9 +17,13 @@
         </head>
         <body>
             <header>
-                <h1>
-                    Nome do APP
-                </h1>
+                <ul class = barbeiro>
+                    <li><img src="icones/barbeiro.png"alt="figmes" height="60" width="75"></li>
+                    <h1>
+                        BarbApp
+                    </h1>
+                    <li><img src="icones/barbeiro.png"alt="figmes" height="60" width="75"></li>
+                </ul>
             </header>
             <nav>
                 <ul class="block">
