acréscimo de cores

--- a/fluxos de tela.html
+++ b/fluxos de tela.html
@@ -27,28 +27,35 @@
             </header>
             <nav>
                 <ul class="block">
-                    <li class="border">
+                    <li class="border-vermelho">
                         <a href="tela_agenda.html">
                             <ul class="linha">
                                 <li class="agenda"><img src="icones/icone agenda 1.png"></li>
-                                <li>Agenda</li>
+                                <ul class="black">
+                                    <li>Agenda</li>
+                                </ul>
                             </ul>
                         </a>
                     </li>
 
-                    <li class="border">
+                    <li class="border-azul">
                         <a href="tela_relações.html">
                             <ul class="linha">
                                 <li class="agenda"><img src="icones/icone relacoes 1.png"></li>
-                                <li>Relações</li>
+                                <ul class="black">
+                                    <li>Relações</li>
+                                </ul>
                             </ul>
                         </a>
                     </li>
-                    <li class="border">
+                    <li class="border-branco">
                         <a href="tela_planodefidelidade.html">
                             <ul class="linha">
                                 <li class="agenda"><img src="icones/icone fidelidade 1.png"></li>
-                                <li>Plano de Fidelidade</li>
+                                
+                                <ul class="black">
+                                    <li>Plano de Fidelidade</li>
+                                </ul>
                             </ul>
                         </a>
                     </li>
