--- a/tela_agenda.html
+++ b/tela_agenda.html
@@ -25,13 +25,13 @@
             </header>
             <main>
                 <ul class = "block">
-                    <li class = "border">
+                    <li class = "border-azul">
                         <a href="tela_hoje.html">Hoje</a>
                     </li>
-                    <li class = "border">
+                    <li class = "border-vermelho">
                         <a href="tela_semana.html">Semana</a>
                     </li>
-                    <li class = "border">
+                    <li class = "border-branco">
                         <a href="tela_mes.html">Mês</a>
                     </li>
                 </ul>
