--- a/tela_meusplanos.html
+++ b/tela_meusplanos.html
@@ -25,7 +25,7 @@
             </header>
             <main>
                 <ul class="block">
-                    <li class="border">
+                    <li class="border-azul">
                         <a href="tela_planodecortes.html">
                         Plano de Cortes
                         </a>
