--- a/tela_planodefidelidade.html
+++ b/tela_planodefidelidade.html
@@ -25,10 +25,10 @@
             </header>
             <main>
                 <ul class="block">
-                    <li class="border">
+                    <li class="border-azul">
                         <a href="tela_meusplanos.html">Meus Planos</a>
                     </li>
-                    <li class="border">
+                    <li class="border-vermelho">
                         <a href="tela_criarnovoplano.html">Criar um novo Plano</a>
                     </li>
                 </ul>
