--- a/tela_relações.html
+++ b/tela_relações.html
@@ -25,10 +25,10 @@
             </header>
             <main>
                 <ul class = "block">
-                    <li class="border">
+                    <li class="border-azul">
                         <a href="tela_darfeedback.html">Dar Feedback</a>
                     </li>
-                    <li class="border">
+                    <li class="border-vermelho">
                         <a href="tela_meusfeedbacks.html">Meus Feedbacks</a>
                     </li>
                 </ul>
