--- a/tela_hoje.html
+++ b/tela_hoje.html
@@ -25,10 +25,10 @@
             </header>
             <main>
                 <ul class="block">
-                    <li class="border">
+                    <li class="border-vermelho">
                         <a href="tela_Jose.html"> 12:00 - Corte José</a>
                     </li>
-                    <li class="border">
+                    <li class="border-azul">
                         <a href="tela_Luciana.html">14:00 - Manicure Luciana</a>
                     </li>
                 </ul>
