--- a/tela_planodecortes.html
+++ b/tela_planodecortes.html
@@ -25,10 +25,10 @@
             </header>
             <main>
                 <ul class="block">
-                    <li class="border">
+                    <li class="border-azul">
                         <a href="tela_vizualizarplano.html">Vizualizar Plano</a>
                     </li>
-                    <li class="border">
+                    <li class="border-vermelho">
                         <a href="tela_acompanharplano.html">Acompanhar o andamento dos meus clientes</a>
                     </li>
                 </ul>
